--- a/style.css
+++ b/style.css
@@ -15,19 +15,31 @@ a:hover {
 
 
 .navbar {
-    background-color: #ffffff;
+    background-color: #ffffffcc;
     width: 100%;
     height: 100px;
     position: fixed;
     top: 0px;
     left: 0px;
+    
+    
+}
 
+#navbar__logo {
+    height: 70px;
+    position: relative;
+    margin: 15px;
+    opacity: .8;
 }
 
 .navbar__menu {
+    opacity: 1.2;
     display: flex;
+    position: relative;
     list-style: none;
     justify-content: flex-end;
+    width: 60%;
+    float: right;
    
     
 }
@@ -91,4 +103,21 @@ h2 {
     color: #474747;
     width: 300px;
     margin: 25px;
+}
+
+#car {
+    width: 300px;
+    height: 250px;
+    margin: 0
+    px 25px;
+}
+
+.footer__container {
+    position: absolute;
+    width: 100%;
+    color: #474747;
+    background-color: #ffffff;
+    bottom: 0%;
+    
+    
 }
